# Multilevel_1D-TDSE

./: .gitignore  12_read.out  13_read.out  14_read.out  1q  23_read.out  24_read.out  34_read.out  DOCUMENTATION.md  Evib.out  GUI_DOC.md  H2+_BO_read.out  KER_spctra_1g_1D.out  KER_spctra_2u_1D.out  KER_spctra_total_1D.out  ML-TDSE-dev  Makefile  Momentum_spctra_2u_1D.out  Momentum_spectra_1g_1D.out  Momentum_spectra_total_1D.out  README.md  USAGE.md  adiabatic.f90  chi0.out  chi_indivisiual.out  cof_1d.out  commandline_args.mod  data_au.mod  data_grid.mod  dynamics  electric_field1_E0.10_width5.out  electric_field2_E0.0000_width0.out  fftw3.mod  field_1d.out  flake.nix  fort.0  gesamtpotential.out  global_vars.mod  input.ini  ionic_pot.out  (+9 more)
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
data/: 13_read.out  14_read.out  23_read.out  H2+_BO_read.out  KER_spctra_1g_1D.out  KER_spctra_2u_1D.out  KER_spctra_total_1D.out  Momentum_spctra_2u_1D.out  Momentum_spectra_1g_1D.out  Momentum_spectra_total_1D.out  cof_1d.out  electric_field1_E0.10_width5.out  gesamtpotential.out  input.ini  input_vars.mod
documentaion/: DOCUMENTATION.md  USAGE.md
documentation/: DOCUMENTATION.md  GUI_DOC.md  TEST_DOC.md
input_data/: input
nix/: overlay.nix
nix/pkgs/ml-tdse/: default.nix
src/: adiabatic.f90  blas_interfaces_module.mod  commandlinemodule.f90  data_au.mod  global_vars.mod  initializer.f90  inputvars.mod  main.f90  meson.build  nuclear_wv.f90  printinputvars.mod  propagation.f90  propagation.f90_old  pulse.f90  readinputfile.mod  readinputmodule.f90  setpot.f90  variablesmodule.f90
src/IO_modules/: data_au.f90  global_vars.f90  input_vars.f90  meson.build  output_dir.f03  printinput.f90  readinputmodule.f90  varprecision.f90
src/blas_module/: blas_interface.f90  meson.build
src/fft/: fftw3.f03  fftw3.f90  meson.build
src/input_modules/: commandlinemodule.mod  data_au.f90  data_au.mod  fftw3.f90  global_vars.f90  global_vars.mod  inputvars.mod  meson.build  pot_param.f90  pot_param.mod  printinput.f90  pulse.f90  readinputfile.mod  readinputmodule.f90  variablesmodule.f90  varprecision.mod
src/libs/: blas_interface.f03  meson.build  timeit.f90
src/performance_modules/: meson.build  timeit.f90
src/processes/: meson.build  pulse_gen.f90  split_operator.f03
src/propagator/: meson.build  split_operator.f03
src/pulse_gen/: meson.build  pulse.f90
static_build/: ML-TDSE
tools/: gui.py  pyqt_gui.py  requirements.txt
